Allow to execute event handlers listening to events in cloned documents.

Similar to Documents created by DOMImplementation, DOMParser,
Document constructor, cloned Documents should inherit ContextDocument.

Note that <script> and attribute event listeners in such documents
still don't work.

Bug: 733071
Change-Id: I55ba719647a4b5b1147aedbc25fef100bb7e49af
Reviewed-on: https://chromium-review.googlesource.com/535256
Reviewed-by: Hayato Ito <hayato@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479332}
Former-commit-id: 2c8d6871f9de55fe8fdc606efd101c39792a18a2